# ACS_Mikhaylov_German

./: README.md
Homework_01/: CMakeLists.txt  container.cpp  container.h  diagonalmatrix.cpp  diagonalmatrix.h  main.cpp  matrix.cpp  matrix.h  regularmatrix.cpp  regularmatrix.h  rnd.h  trianglematrix.cpp  trianglematrix.h  Пояснительная записка.md
Homework_02/: CMakeLists.txt  Container.cpp  Container.h  Matrix.cpp  Matrix.h  diagonalmatrix.cpp  diagonalmatrix.h  main.cpp  regularmatrix.cpp  regularmatrix.h  rnd.h  trianglematrix.cpp  trianglematrix.h  Пояснительная записка.md
Homework_03/: DiagonalMatrix.py  Matrix.py  RegularMatrix.py  TriangleMatrix.py  container.py  main.py  Пояснительная записка.md
Homework_03/tests_in/: test01.txt  test03.txt  test05.txt
Homework_03/tests_out/: test01_out1.txt  test01_out2.txt  test02_out1.txt  test02_out2.txt  test03_out1.txt  test03_out2.txt  test04_out1.txt  test04_out2.txt  test05_out1.txt  test05_out2.txt
Homework_05/: Bear.cpp  Bear.h  Bee.cpp  Bee.h  BeeHive.cpp  BeeHive.h  CMakeLists.txt  main.cpp  Пояснительная записка.md
